--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Gulp Starter Kit</title>
+    <title>Projekt 1</title>
+    <meta name="viewport" content="width=device-width">
     <!-- build:css -->
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
