--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Projekt 1</title>
-    <meta name="viewport" content="width=device-width">
+     <meta name="viewport" content="width=device-width">
     <!-- build:css -->
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600" rel="stylesheet"> -->
     <!-- endbuild -->
   </head>
   <body>
