--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
     <title>Projekt 1</title>
@@ -13,7 +13,7 @@
   <body>
     <header>
       <h1>masteralb creative</h1>
-      <img src="img/logo_top.png" alt="">
+      <img src="img/logo_top.png" alt="masteralb">
     </header>
     <div class="container">
       <div class="column">
@@ -134,7 +134,7 @@
           </div>
         </form>
         </div>
-        <img src="img/logo_bottom.png" alt="">
+        <img src="img/logo_bottom.png" alt="masteralb">
       </div>
     </div>
 
